--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags for WhatsApp Preview -->
     <meta property="og:title" content="दैनिक जागरण समाचार🔥" />
     <meta property="og:description" content="Modi to visit IIT Patna before Bihar Elections 2025" />
-    <meta property="og:image" content="https://th.bing.com/th/id/R.cb1cc28f283301a5d4e91ea7cefde1fc?rik=EJJfV1cx%2fY3s6g&riu=http%3a%2f%2fwww.pmindia.gov.in%2fwp-content%2fuploads%2f2014%2f06%2fHigh1.jpg&ehk=bPwyjIef3Jyenrgi%2b2KGxSfg1Gy3UWA07762GkH2IhA%3d&risl=&pid=ImgRaw&r=0" />
+    <meta property="og:image" content="https://www.shutterstock.com/image-photo/indias-prime-minister-narendra-modi-before-2441612935" />
     <meta property="og:url" content="https://your-website.com" />
   </head>
   <body>
