--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags for WhatsApp Preview -->
     <meta property="og:title" content="दैनिक जागरण समाचार🔥" />
     <meta property="og:description" content="Modi to visit IIT Patna before Bihar Elections 2025" />
-    <meta property="og:image" content="https://www.shutterstock.com/image-photo/indias-prime-minister-narendra-modi-before-2441612935" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/b/b2/Shri_Narendra_Modi%2C_Prime_Minister_of_India_%283x4_cropped%29.jpg" />
     <meta property="og:url" content="https://your-website.com" />
   </head>
   <body>
